NetBSD Problem Report #52949

From www@NetBSD.org  Wed Jan 24 20:21:54 2018
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 1EAAD7A195
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 24 Jan 2018 20:21:54 +0000 (UTC)
Message-Id: <20180124202153.39F29806BF@mollari.NetBSD.org>
Date: Wed, 24 Jan 2018 20:21:53 +0000 (UTC)
From: venture37@geeklan.co.uk
Reply-To: venture37@geeklan.co.uk
To: gnats-bugs@NetBSD.org
Subject: Audio pitch lower than it should be when playing back sound files
X-Send-Pr-Version: www-1.0

>Number:         52949
>Category:       port-macppc
>Synopsis:       Audio pitch lower than it should be when playing back sound files
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    nat
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 24 20:25:00 +0000 2018
>Closed-Date:    Sat Jan 27 16:29:15 +0000 2018
>Last-Modified:  Tue Mar 13 17:10:00 +0000 2018
>Originator:     Sevan Janiyan
>Release:        8.0_Beta & -current
>Organization:
>Environment:
>Description:
I have several powerpc macs with similar symptoms. Audio plays out on the system but it's way slower than it should be. The load on the system is nominal (3% load?)

My test has been a uncompressed wave file of kiasmos - looped & an mp3 file. I've played both with mplayer & the wave file with the tool in base which the name now escapes me.
in both scenarios the files are pitches down way lower than they should be.
>How-To-Repeat:
Play an mp3 or wave file on a powerpc mac
>Fix:

>Release-Note:

>Audit-Trail:
From: Michael <macallan@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-macppc/52949: Audio pitch lower than it should be when
 playing back sound files
Date: Wed, 24 Jan 2018 15:50:20 -0500

 What audio chip(s) are you using? I just tried mpg123 on my iBook G4
 ( with snapper/tas3004 audio ) and Mini2 ( aoa codec ) didn't notice
 anything wrong. I'll check awacs in a little bit.
 Both -current from a few hours ago.

From: Sevan Janiyan <venture37@geeklan.co.uk>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-macppc/52949: Audio pitch lower than it should be when
 playing back sound files
Date: Thu, 25 Jan 2018 00:08:43 +0000

 On 01/24/18 20:55, Michael wrote:
 >  What audio chip(s) are you using? I just tried mpg123 on my iBook G4
 >  ( with snapper/tas3004 audio ) and Mini2 ( aoa codec ) didn't notice
 >  anything wrong. I'll check awacs in a little bit.
 >  Both -current from a few hours ago.
 >  
 TAS3004 on a PowerBook6,4
 TAS3004 on a PowerBook5,2
 TAS3001 on a PowerMac4,5
 snapper? on a PowerMac10,1

 Wave file I'm testing
 RIFF (little-endian) data, WAVE audio, Microsoft PCM, 16 bit, stereo
 44100 Hz

 I noticed that that microphone is active when playing audio back which
 results in feedback once the volumes gets beyond a certain point.

 I know the audio is slow because playing the same file back on QuickTime
 7, with say the PowerBook6,4 on Tiger, music is back at the expected speed.


 Sevan

From: Michael <macallan1888@gmail.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-macppc/52949: Audio pitch lower than it should be when
 playing back sound files
Date: Wed, 24 Jan 2018 23:03:02 -0500

 Hello,

 >  TAS3004 on a PowerBook6,4
 >  TAS3004 on a PowerBook5,2

 Odd, I tried a PowerBook6,3 which should be identical in terms of audio
 hardware and there was no such thing.
 Just to be sure - could you try mpg123 from recent pkgsrc?

 >  Wave file I'm testing
 >  RIFF (little-endian) data, WAVE audio, Microsoft PCM, 16 bit, stereo
 >  44100 Hz

 Hmm, I wonder if audioplay gets something wrong with LE .wav...

 >  I noticed that that microphone is active when playing audio back
 > which results in feedback once the volumes gets beyond a certain
 > point. 

 Huh, I haven't seen ( I mean heard ) that one either.

 >  I know the audio is slow because playing the same file back on
 > QuickTime 7, with say the PowerBook6,4 on Tiger, music is back at the
 > expected speed. 

 Sounds the same here as it does on a sparcstation with dbri audio.
 ( that was the closest thing I had which isn't a mac... )

 have fun
 Michael

From: Sevan Janiyan <venture37@geeklan.co.uk>
To: "gnats-bugs@NetBSD.org" <gnats-bugs@NetBSD.org>
Cc: 
Subject: Re: port-macppc/52949: Audio pitch lower than it should be when playing back sound files
Date: Thu, 25 Jan 2018 09:58:43 +0000

 > On 25 Jan 2018, at 04:05, Michael <macallan1888@gmail.com> wrote:
 > 
 > Huh, I haven't seen ( I mean heard ) that one either.

 Turn up the volume using the function keys on the keyboard.

 Will give an up to date version of mpeg123 a try.


 Sevan

From: Sevan Janiyan <venture37@geeklan.co.uk>
To: "gnats-bugs@NetBSD.org" <gnats-bugs@NetBSD.org>
Cc: 
Subject: Re: port-macppc/52949: Audio pitch lower than it should be when playing back sound files
Date: Fri, 26 Jan 2018 23:33:22 +0000

 > On 25 Jan 2018, at 04:05, Michael <macallan1888@gmail.com> wrote:
 >=20
 > The following reply was made to PR port-macppc/52949; it has been noted by=
  GNATS.
 >=20
 > From: Michael <macallan1888@gmail.com>
 > To: gnats-bugs@NetBSD.org
 > Cc:=20
 > Subject: Re: port-macppc/52949: Audio pitch lower than it should be when
 > playing back sound files
 > Date: Wed, 24 Jan 2018 23:03:02 -0500
 >=20
 > Hello,
 >=20
 >> TAS3004 on a PowerBook6,4
 >> TAS3004 on a PowerBook5,2
 >=20
 > Odd, I tried a PowerBook6,3 which should be identical in terms of audio
 > hardware and there was no such thing.
 > Just to be sure - could you try mpg123 from recent pkgsrc?

 mpg123 wont play the wave file but I tested it with an mp3 file. Same result=
 . Pitch is lower than it should be.

 >> Wave file I'm testing
 >> RIFF (little-endian) data, WAVE audio, Microsoft PCM, 16 bit, stereo
 >> 44100 Hz
 >=20
 > Hmm, I wonder if audioplay gets something wrong with LE .wav...

 Doesn't appear to be specifc to audioplay=20
 >> I noticed that that microphone is active when playing audio back
 >> which results in feedback once the volumes gets beyond a certain
 >> point.
 >=20
 > Huh, I haven't seen ( I mean heard ) that one either.

 :)
 Sent video of the pitch issue and audio playback on tiger & netbsd from the s=
 ame system off list.


 Sevan

Responsible-Changed-From-To: port-macppc-maintainer->nat
Responsible-Changed-By: sevan@NetBSD.org
Responsible-Changed-When: Sat, 27 Jan 2018 16:29:15 +0000
Responsible-Changed-Why:
Nat found the solution


State-Changed-From-To: open->closed
State-Changed-By: sevan@NetBSD.org
State-Changed-When: Sat, 27 Jan 2018 16:29:15 +0000
State-Changed-Why:
Fix commited

From Nat:
it seems that snapper_init should be called before audio_attach_mi, as snapper 
init is setting the rate to 44100 after the hardware format has been configured 
by audio_attach_mi.

audio_attach_mi should be the last thing called during an attach of an audio 
device so the audio device is ready to be configured when audio_attach_mi is 
called.


From: "Sevan Janiyan" <sevan@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52949 CVS commit: src/sys/arch/macppc/dev
Date: Sat, 27 Jan 2018 16:21:47 +0000

 Module Name:	src
 Committed By:	sevan
 Date:		Sat Jan 27 16:21:47 UTC 2018

 Modified Files:
 	src/sys/arch/macppc/dev: snapper.c

 Log Message:
 Fix issue with audio being downpitched, thanks to <nat>

 "it seems that snapper_init should be called before audio_attach_mi, as snapper
 init is setting the rate to 44100 after the hardware format has been configured
 by audio_attach_mi.

 audio_attach_mi should be the last thing called during an attach of an audio
 device so the audio device is ready to be configured when audio_attach_mi is
 called."

 Resolves PR port-macppc/52949


 To generate a diff of this commit:
 cvs rdiff -u -r1.41 -r1.42 src/sys/arch/macppc/dev/snapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Michael <macallan1888@gmail.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-macppc/52949 (Audio pitch lower than it should be when
 playing back sound files)
Date: Sat, 27 Jan 2018 13:44:21 -0500

 Explains why I couldn't reproduce it - my mp3s are all 44.1kHz.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52949 CVS commit: [netbsd-8] src/sys/arch/macppc/dev
Date: Sun, 4 Feb 2018 12:43:57 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Feb  4 12:43:57 UTC 2018

 Modified Files:
 	src/sys/arch/macppc/dev [netbsd-8]: snapper.c

 Log Message:
 Pull up following revision(s) (requested by sevan in ticket #520):
 	sys/arch/macppc/dev/snapper.c: revision 1.42
 Fix issue with audio being downpitched, thanks to <nat>
 "it seems that snapper_init should be called before audio_attach_mi, as
 snapper
 init is setting the rate to 44100 after the hardware format has been
 configured
 by audio_attach_mi.
 audio_attach_mi should be the last thing called during an attach of an audio
 device so the audio device is ready to be configured when audio_attach_mi is
 called."
 Resolves PR port-macppc/52949


 To generate a diff of this commit:
 cvs rdiff -u -r1.41 -r1.41.6.1 src/sys/arch/macppc/dev/snapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52949 CVS commit: [netbsd-7] src/sys/arch/macppc/dev
Date: Mon, 19 Feb 2018 19:41:43 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Feb 19 19:41:43 UTC 2018

 Modified Files:
 	src/sys/arch/macppc/dev [netbsd-7]: snapper.c

 Log Message:
 Pull up following revision(s) (requested by sevan in ticket #1559):
 	sys/arch/macppc/dev/snapper.c: 1.42
 Fix issue with audio being downpitched, thanks to <nat>
 "it seems that snapper_init should be called before audio_attach_mi, as
 snapper
 init is setting the rate to 44100 after the hardware format has been
 configured
 by audio_attach_mi.
 audio_attach_mi should be the last thing called during an attach of an audio
 device so the audio device is ready to be configured when audio_attach_mi is
 called."
 Resolves PR port-macppc/52949


 To generate a diff of this commit:
 cvs rdiff -u -r1.39 -r1.39.4.1 src/sys/arch/macppc/dev/snapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52949 CVS commit: [netbsd-6] src/sys/arch/macppc/dev
Date: Tue, 13 Mar 2018 17:09:15 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Mar 13 17:09:15 UTC 2018

 Modified Files:
 	src/sys/arch/macppc/dev [netbsd-6]: snapper.c

 Log Message:
 Pull up following revision(s) (requested by sevan in ticket #1522):
 	sys/arch/macppc/dev/snapper.c: 1.42
 Fix issue with audio being downpitched, thanks to <nat>
 "it seems that snapper_init should be called before audio_attach_mi, as
 snapper
 init is setting the rate to 44100 after the hardware format has been
 configured
 by audio_attach_mi.
 audio_attach_mi should be the last thing called during an attach of an audio
 device so the audio device is ready to be configured when audio_attach_mi is
 called."
 Resolves PR port-macppc/52949


 To generate a diff of this commit:
 cvs rdiff -u -r1.38 -r1.38.4.1 src/sys/arch/macppc/dev/snapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.