Fix issue with audio being downpitched, thanks to <nat>

"it seems that snapper_init should be called before audio_attach_mi, as snapper
init is setting the rate to 44100 after the hardware format has been configured
by audio_attach_mi.

audio_attach_mi should be the last thing called during an attach of an audio
device so the audio device is ready to be configured when audio_attach_mi is
called."

Resolves PR port-macppc/52949